# claw-aie

./: .gitignore  INTEGRATION_SPEC.md  README.md  SPEC.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_hook.py
aie_integration/: __init__.py  browser_review.py  browser_tools.py  cli.py  config.py  harness.py  hooks.yaml  logger_client.py  sanitiser.py  session.py  spawn_backend.py  spawn_hooks.py  tool_executor.py
aie_integration/hooks/: __init__.py  aie_emitter.py  base.py  permission_hook.py  rate_limit_hook.py  runner.py
claw_aie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
profiles/: browser-review.json
scripts/: test_aie_hook.py
tests/: test_aie_emitter.py  test_browser_tools.py  test_e2e_browser_review.py  test_harness.py  test_hooks.py  test_tool_executor.py
